packages/tree-sitter-layup/grammar.js
/** @file Syntax grammar for Layup; semantic validation belongs to the compiler. */
/// <reference types="tree-sitter-cli/dsl" />

const keywords = [
  'diagram', 'node', 'group', 'package', 'crate', 'row', 'section', 'band', 'gap', 'divider',
  'node-style', 'edge-style', 'defaults', 'note', 'code', 'text', 'tag',
  'legend', 'slide', 'view', 'include', 'step', 'show', 'highlight', 'speaker-note',
  'participant', 'actor', 'loop', 'optional', 'alternatives', 'branch',
  'state', 'initial', 'final', 'choice', 'entry', 'exit', 'entity', 'fields', 'field', 'port',
];

export default grammar({
  name: 'layup',
  word: $ => $.identifier,
  extras: $ => [/[ \t\r\f]+/, $.line_comment, $.block_comment],
  externals: $ => [$.block_comment, $.string_content, $._error_sentinel],
  conflicts: $ => [[$.annotation_argument, $._reference_name], [$._name, $.declaration], [$._scalar, $._reference_name]],
  rules: {
    source_file: $ => seq(repeat($._separator), optional(seq($.version_directive, repeat1($._separator))), optional($._statements)),
    version_directive: $ => seq('layup', field('version', $.number)),
    _separator: $ => choice('\n', ';'),
    _statements: $ => seq($._statement, repeat(seq(repeat1($._separator), $._statement)), repeat($._separator)),
    _statement: $ => seq(repeat(seq($.annotation, repeat($._separator))), choice($.declaration, $.connection)),
    declaration: $ => seq(field('keyword', choice($.declaration_keyword, $.identifier)), repeat($._argument), optional($.block)),
    declaration_keyword: _ => choice(...keywords),
    connection: $ => seq(optional(seq($.connection_keyword, field('name', choice($._name, $.string)))), field('source', $.reference), $.arrow, field('target', $.reference), repeat($._argument)),
    connection_keyword: _ => choice('edge', 'message', 'transition', 'relationship'),
    block: $ => seq('{', repeat($._separator), optional($._statements), '}'),
    _argument: $ => choice($.attribute, $._scalar),
    attribute: $ => seq(field('name', $._name), '=', field('value', $._value)),
    annotation_argument: $ => seq(field('name', $._name), repeat('\n'), '=', repeat('\n'), field('value', $._value)),
    _scalar: $ => choice($.string, $.number, $.boolean, $.null, $.reference),
    _value: $ => choice($._scalar, $.list, $.record),
    annotation: $ => seq('@', field('name', $.annotation_name), optional($.arguments)),
    annotation_name: $ => seq($._name, repeat(seq('.', $._name))),
    arguments: $ => seq('(', repeat('\n'), optional(seq($.annotation_argument, repeat('\n'), repeat(seq(',', repeat('\n'), $.annotation_argument, repeat('\n'))), optional(seq(',', repeat('\n'))))), ')'),
    list: $ => seq('[', repeat('\n'), optional(seq($._value, repeat('\n'), repeat(seq(',', repeat('\n'), $._value, repeat('\n'))), optional(seq(',', repeat('\n'))))), ']'),
    record: $ => seq('{', repeat('\n'), optional(seq($.record_entry, repeat('\n'), repeat(seq(',', repeat('\n'), $.record_entry, repeat('\n'))), optional(seq(',', repeat('\n'))))), '}'),
    record_entry: $ => seq(field('name', choice($._name, $.string)), repeat('\n'), ':', repeat('\n'), field('value', $._value)),
    _name: $ => choice($.identifier, alias($.declaration_keyword, $.identifier), alias($.connection_keyword, $.identifier)),
    _reference_name: $ => choice($._name, $.string),
    reference: $ => prec.right(seq(optional('::'), $._reference_name, repeat(seq('.', $._reference_name)))),
    identifier: _ => /[\p{XID_Start}_][\p{XID_Continue}_]*(?:-[\p{XID_Continue}_]+)*/,
    number: _ => /-?(?:[0-9]+(?:\.[0-9]*)?|\.[0-9]+)(?:[eE][+-]?[0-9]+)?/,
    boolean: _ => choice('true', 'false'),
    null: _ => 'null',
    arrow: _ => token(prec(1, choice('->', '<-', '<->', '--'))),
    string: $ => seq('"', repeat(choice($.string_content, $.escape_sequence)), token.immediate('"')),
    escape_sequence: _ => token.immediate(/\\[^\r\n]/),
    line_comment: _ => token(seq('//', /[^\n]*/)),
  },
});
